--- a/bin/webserver/Dockerfile
+++ b/bin/webserver/Dockerfile
@@ -7,7 +7,7 @@ RUN apt-get upgrade -y
 RUN apt-get -y install nano wget dialog mc
 
 # Install important libraries
-RUN apt-get -y install --fix-missing apt-utils build-essential git curl libcurl3 libcurl3-dev zip openssl
+RUN apt-get -y install --fix-missing apt-utils build-essential git curl libcurl4 libcurl4-openssl-dev zip openssl
 
 # Composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
@@ -22,8 +22,8 @@ RUN docker-php-ext-enable xdebug
 
 # Other PHP7 Extensions
 
-RUN apt-get -y install libsqlite3-dev libsqlite3-0 mysql-client
-RUN docker-php-ext-install pdo_mysql 
+RUN apt-get -y install libsqlite3-dev libsqlite3-0 mariadb-client
+RUN docker-php-ext-install pdo_mysql
 RUN docker-php-ext-install pdo_sqlite
 RUN docker-php-ext-install mysqli
 
