--- a/bin/php/Dockerfile
+++ b/bin/php/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:7.2-apache
+FROM php:8.3-apache
 
 RUN apt-get -y update --fix-missing
 RUN apt-get upgrade -y
@@ -13,8 +13,8 @@ RUN apt-get -y install --fix-missing apt-utils build-essential git curl libcurl4
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
 # Install xdebug
-RUN pecl install xdebug-2.6.0
-RUN docker-php-ext-enable xdebug
+#RUN pecl install xdebug-2.6.0
+#RUN docker-php-ext-enable xdebug
 
 # Install redis
 #RUN pecl install redis-4.0.1
@@ -28,21 +28,23 @@ RUN docker-php-ext-install pdo_sqlite
 RUN docker-php-ext-install mysqli
 
 RUN docker-php-ext-install curl
-RUN docker-php-ext-install tokenizer
-RUN docker-php-ext-install json
-
-RUN apt-get -y install zlib1g-dev
-RUN docker-php-ext-install zip
+#RUN docker-php-ext-install tokenizer
+#RUN docker-php-ext-install json
+#RUN apt-get -y install zlib1g-dev
+#RUN docker-php-ext-install zip
 
 RUN apt-get -y install libicu-dev
 RUN docker-php-ext-install -j$(nproc) intl
 
-RUN docker-php-ext-install mbstring
+#RUN docker-php-ext-install mbstring
 RUN docker-php-ext-install gettext
 
 RUN apt-get install -y libfreetype6-dev libjpeg62-turbo-dev libpng-dev
-RUN docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ 
+RUN docker-php-ext-configure gd --with-freetype=/usr/include/ --with-jpeg=/usr/include/
 RUN docker-php-ext-install -j$(nproc) gd
+
+RUN docker-php-ext-install exif
+RUN docker-php-ext-enable exif
 
 # Enable apache modules
 RUN a2enmod rewrite headers
@@ -54,5 +56,7 @@ RUN groupadd --gid ${BX_GID} bitrix \
   && chown -R bitrix. /var/www
 
 COPY ./config/envvars /etc/apache2/envvars
+
+RUN echo "ServerName localhost" >> /etc/apache2/apache2.conf
 
 WORKDIR /var/www
