--- a/config/php/php.ini
+++ b/config/php/php.ini
@@ -1,3 +1,5 @@
 memory_limit = 128M
 post_max_size = 100M
-upload_max_filesize = 20M
+upload_max_filesize = 100M
+max_input_vars = 10000
+date.timezone = "Europe/Moscow"
