--- a/bin/mysql/config/mysql.cnf
+++ b/bin/mysql/config/mysql.cnf
@@ -1,33 +1,25 @@
-#
-# The MySQL database server configuration file.
-#
-# You can copy this to one of:
-# - "/etc/mysql/my.cnf" to set global options,
-# - "~/.my.cnf" to set user-specific options.
-# 
-# One can use all long options that the program supports.
-# Run program with --help to get a list of available options and with
-# --print-defaults to see which it would actually understand and use.
-#
-# For explanations see
-# http://dev.mysql.com/doc/mysql/en/server-system-variables.html
-
-#
-# * IMPORTANT: Additional settings that can override those from this file!
-#   The files must end with '.cnf', otherwise they'll be ignored.
-#
-
 [mysqld]
-sql-mode = "" 
+sql-mode = ""
+innodb_strict_mode = 0
+default-time-zone="+03:00"
 
-innodb_flush_log_at_trx_commit = 0
+innodb_flush_log_at_trx_commit = 2
 innodb_buffer_pool_size = 1G
+
+key_buffer_size = 32M
+
 innodb_flush_method = O_DIRECT
 innodb_data_file_path=ibdata1:10M:autoextend
 innodb_file_per_table=1
 
+transaction-isolation = READ-COMMITTED
+
+
+[mysqldump]
+max_allowed_packet=500M
 
 [mysql]
+
 
 [mysql-safe]
 thread_cache_size = 32
@@ -36,6 +28,7 @@ query_cache_size = 128M
 query_cache_limit = 64M
 
 max_connections = 200
+
 
 !includedir /etc/mysql/conf.d/
 !includedir /etc/mysql/mysql.conf.d/
