--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,25 @@
-version: '3.3'
-
 services:
-  webserver:
+  php:
     build:
-      context: ./bin/webserver
+      context: ./bin/php
       args:
         BX_UID: 1000
         BX_GID: 1000
-    container_name: '7.2.x-webserver'
+    container_name: '8.3-php'
     restart: 'no'
     ports:
       - "${HOST_MACHINE_UNSECURE_HOST_PORT}:80"
       - "${HOST_MACHINE_SECURE_HOST_PORT}:443"
-    links: 
+    links:
       - mysql
-    volumes: 
+    volumes:
       - ${DOCUMENT_ROOT-./www}:/var/www
       - ${PHP_INI-./config/php/php.ini}:/usr/local/etc/php/php.ini
       - ${CONFIG_DIR-./config/vhosts}:/etc/apache2/sites-enabled
       - ${LOG_DIR-./logs/apache2}:/var/log/apache2
+      - /home/and1/.ssh:/home/bitrix/.ssh
+      - /media/and1/bdea3293-06d0-4ee5-8289-3e4bec727627/ssd/Images/ImagesFrom:/var/www/ImagesFrom
+      - /media/and1/bdea3293-06d0-4ee5-8289-3e4bec727627/ssd/Images/ImagesTo:/var/www/ImagesTo
   mysql:
     command: --explicit_defaults_for_timestamp
     build: ./bin/mysql
@@ -26,7 +27,7 @@ services:
     restart: 'no'
     ports:
       - "${HOST_MACHINE_MYSQL_PORT}:3306"
-    volumes: 
+    volumes:
       - ${MYSQL_DATA_DIR-./data/mysql}:/var/lib/mysql
       - ${MYSQL_LOG_DIR-./logs/mysql}:/var/log/mysql
     environment:
